[SC-11315] added resetting of bank-code after add new client, increase pac-container z-index as it was lower then modal container after bank-code-edit opening, fixed error after saving of the second client

--- a/src/styles.css
+++ b/src/styles.css
@@ -206,3 +206,7 @@ i.save-to-clipboard {
     background-position: center;
     background-size: cover;
 }
+
+.pac-container {
+    z-index: 1002;
+}
